SLING-7161 - Update site to reference git instead of svn
First round of changes, affects the most visible pages.